@@ -58,7 +58,8 @@ public:
     //should be in Chrome
     virtual void runJavaScriptAlert(const String& message);
     virtual bool runJavaScriptConfirm(const String& message);
-    virtual bool runJavaScriptPrompt(const String& message, const String& defaultValue, String& result);
+    virtual bool runJavaScriptPrompt(const String& message, const String& defaultValue,
+                                     String& result);
     virtual bool shouldInterruptJavaScript();
     virtual void scheduleClose();
     virtual void focusWindow();
